# moviebuilder

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.css  tauriRuntime.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  report.rs  types.rs
src/components/: FileList.tsx  ResultPanel.tsx  StatusBar.tsx  SubtitleMatchSettings.tsx  Toolbar.tsx
src/types/: index.ts
