[package]
name = "video-inspector-pro"
version = "0.1.0"
description = "VideoInspector Pro MVP"
authors = ["VideoInspector Pro"]
edition = "2021"

[lib]
name = "video_inspector_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-dialog = "2.4.0"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "time", "sync"] }
